src/objects/Movie__c.object
<CustomObject>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Favorited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Favorited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_In_Watch_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_In_Watch_List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Movie_Id__c</fullName>
        <label>Movie_Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <description>Description of the film</description>
        <label>Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Poster_URL__c</fullName>
        <label>Poster_URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Runtime__c</fullName>
        <label>Runtime</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vote_Average__c</fullName>
        <label>Vote Average</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vote_Count__c</fullName>
        <label>Vote Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Movie</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Movie_Id__c</columns>
        <columns>NAME</columns>
        <columns>Is_In_Watch_List__c</columns>
        <columns>Is_Favorited__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Movie Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>